Change z-index of shadow DOM UI to ensure visible over web page contents.

--- a/mink-plugin/css/minkui.css
+++ b/mink-plugin/css/minkui.css
@@ -1,3 +1,3 @@
-#minkuiX {width: 100%; height: 80px; background-color: #eef; margin: 0; top: 0; position: fixed; padding: 5px; border-bottom: 3px double #ccf;}
+#minkuiX {width: 100%; height: 80px; background-color: #eef; margin: 0; top: 0; position: fixed; padding: 5px; border-bottom: 3px double #ccf; z-index:99999;}
 #minkuiX #minkLogo {height: 100%; float: left;}
 h1 {font-size: 14px; font-family: 'Futura', 'Century Gothic', AppleGothic, sans-serif;}
